Mensagem de commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Projeto do Gruma</h1>
-    <p>esse patagrafo representa nova inclusao</p>
+    <p>esse paragrafo representa nova inclusao</p>
 </body>
 
 </html>
